@@ -703,7 +703,7 @@ for 60 sec)"
 #define	RDB_DIR		"dat/rdb"
 #define STATS_FILE	"dat/stats.db"
 #define	SEEN_FILE	"dat/seen.db"
-#define	URL2		"dat/info2.db"
+#define	DEFAULT_URL2	"dat/info2.db"
 #define DUNNO_FILE  "dunno"
 #define WHUT_FILE   "whut"
 #define	BACKUP_DUP	"dat/backup_dups.db"
